fix: add missing security definitions to swagger docs
